# selective_disclosure

./: Cargo.toml
protos/: Cargo.toml
protos/solution/scd/: scd.proto
protos/src/: scd.rs
server/:  Cargo.toml  Cargo.toml  build.rs
server/src/: server.rs
solution/selective_certificate_disclosure/: Cargo.toml
solution/selective_certificate_disclosure/src/: issuer.rs  lib.rs  scd.rs  utils.rs
